--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node src/pp.js",
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js"
   },
   "author": "Ajay Talemuger",
